Redimensionamento da aplicação e add favicon

--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ main {
     text-align: center;
     border: 1px solid white;
     border-radius: 1rem;
-    width: 15.6rem;
-    padding: 1rem 1rem 1.5rem 1rem;
+    width: 21.0rem;
+    height: 32.0rem;
+    padding: 1.5rem 1rem;
     background-color: #FFFFFF;
 }
 
